--- a/assets/css/style-medium.css
+++ b/assets/css/style-medium.css
@@ -15,9 +15,17 @@ body, input, select, textarea {
   #header h1 {
     position: relative;
     font-size: 1.25em; }
+  /* line 24, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+  #header #logo {
+    position: relative;
+    height: inherit; }
+    /* line 28, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+    #header #logo img {
+      height: 70px;
+      width: auto; }
 
 /* Layers */
-/* line 28, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+/* line 38, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
 #navButton .toggle {
   text-decoration: none;
   height: 100%;
@@ -32,7 +40,7 @@ body, input, select, textarea {
     font-style: normal;
     font-weight: normal;
     text-transform: none !important; }
-  /* line 34, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+  /* line 44, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
   #navButton .toggle:before {
     background: #8CD9D3;
     color: #fff;
@@ -47,32 +55,32 @@ body, input, select, textarea {
     top: 0;
     width: 3.5em; }
 
-/* line 51, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+/* line 61, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
 #navPanel {
   background: #8CD9D3;
   color: #fff; }
-  /* line 55, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+  /* line 65, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
   #navPanel nav {
     padding: 0.5em 1.25em; }
-    /* line 58, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+    /* line 68, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
     #navPanel nav ul {
       list-style: none;
       margin: 0;
       padding: 0; }
-      /* line 63, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+      /* line 73, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
       #navPanel nav ul li {
         padding: 0; }
-        /* line 67, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+        /* line 77, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
         #navPanel nav ul li:first-child a:not(.button), #navPanel nav ul li:first-child span:not(.button) {
           border-top: 0; }
-        /* line 72, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+        /* line 82, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
         #navPanel nav ul li a:not(.button), #navPanel nav ul li span:not(.button) {
           border-top: solid 1px rgba(255, 255, 255, 0.75);
           color: #fff;
           display: block;
           padding: 0.75em 0;
           text-decoration: none; }
-    /* line 82, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+    /* line 92, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
     #navPanel nav .button {
       width: 100%; }
 
