--- a/assets/css/style-xlarge.css
+++ b/assets/css/style-xlarge.css
@@ -1,5 +1,5 @@
 /* Basic */
-/* line 6, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xlarge.scss */
+/* line 6, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xlarge.scss */
 body, input, select, textarea {
   font-size: 11pt; }
 
