--- a/assets/css/style-medium.css
+++ b/assets/css/style-medium.css
@@ -1,37 +1,37 @@
 /* Basic */
-/* line 6, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+/* line 6, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
 body, input, select, textarea {
   font-size: 11pt; }
 
 /* Header */
-/* line 13, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+/* line 13, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
 #skel-layers-wrapper {
   padding-top: 0; }
 
-/* line 17, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+/* line 17, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
 #header {
   margin: 6em 0 3em 0; }
-  /* line 19, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+  /* line 19, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
   #header h1 {
     position: relative;
     font-size: 1.25em; }
-  /* line 24, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+  /* line 24, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
   #header #logo {
     position: relative;
     height: inherit; }
-    /* line 28, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+    /* line 28, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
     #header #logo img {
       height: 70px;
       width: auto; }
 
 /* Layers */
-/* line 38, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+/* line 38, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
 #navButton .toggle {
   text-decoration: none;
   height: 100%;
   position: absolute;
   width: 100%; }
-  /* line 24, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/mixins */
+  /* line 24, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/_mixins.scss */
   #navButton .toggle:before {
     content: '\f0c9';
     -moz-osx-font-smoothing: grayscale;
@@ -40,9 +40,9 @@ body, input, select, textarea {
     font-style: normal;
     font-weight: normal;
     text-transform: none !important; }
-  /* line 44, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+  /* line 44, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
   #navButton .toggle:before {
-    background: #8CD9D3;
+    background: #00A5A9;
     color: #fff;
     display: block;
     font-size: 16px;
@@ -55,32 +55,32 @@ body, input, select, textarea {
     top: 0;
     width: 3.5em; }
 
-/* line 61, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+/* line 61, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
 #navPanel {
-  background: #8CD9D3;
+  background: #00A5A9;
   color: #fff; }
-  /* line 65, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+  /* line 65, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
   #navPanel nav {
     padding: 0.5em 1.25em; }
-    /* line 68, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+    /* line 68, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
     #navPanel nav ul {
       list-style: none;
       margin: 0;
       padding: 0; }
-      /* line 73, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+      /* line 73, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
       #navPanel nav ul li {
         padding: 0; }
-        /* line 77, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+        /* line 77, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
         #navPanel nav ul li:first-child a:not(.button), #navPanel nav ul li:first-child span:not(.button) {
           border-top: 0; }
-        /* line 82, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+        /* line 82, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
         #navPanel nav ul li a:not(.button), #navPanel nav ul li span:not(.button) {
           border-top: solid 1px rgba(255, 255, 255, 0.75);
           color: #fff;
           display: block;
           padding: 0.75em 0;
           text-decoration: none; }
-    /* line 92, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-medium.scss */
+    /* line 92, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-medium.scss */
     #navPanel nav .button {
       width: 100%; }
 
