--- a/assets/css/style-xsmall.css
+++ b/assets/css/style-xsmall.css
@@ -1,54 +1,54 @@
 /* Basic */
-/* line 6, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+/* line 6, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
 html, body {
   min-width: 320px; }
 
-/* line 10, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+/* line 10, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
 body, input, select, textarea {
   font-size: 12pt; }
 
 /* List */
-/* line 17, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+/* line 17, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
 ul.actions {
   margin: 0 0 2em 0; }
-  /* line 20, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+  /* line 20, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
   ul.actions li {
     padding: 1em 0 0 0;
     display: block;
     text-align: center;
     width: 100%; }
-    /* line 26, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+    /* line 26, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
     ul.actions li:first-child {
       padding-top: 0; }
-    /* line 30, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+    /* line 30, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
     ul.actions li > * {
       width: 100%;
       margin: 0 !important; }
-      /* line 35, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+      /* line 35, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
       ul.actions li > *.icon:before {
         margin-left: -2em; }
-  /* line 43, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+  /* line 43, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
   ul.actions.small li {
     padding: 0.5em 0 0 0; }
-    /* line 46, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+    /* line 46, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
     ul.actions.small li:first-child {
       padding-top: 0; }
 
 /* Button */
-/* line 59, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+/* line 59, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
 input[type="submit"], input[type="reset"], input[type="button"], .button {
   padding: 0; }
 
 /* Banner */
-/* line 66, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+/* line 66, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
 #header h1 {
   font-size: 1em; }
 
-/* line 71, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+/* line 71, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
 #sub-header {
   margin-bottom: 1em; }
 
-/* line 75, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xsmall.scss */
+/* line 75, /Users/ritcheya1/Documents/ghost/content/themes/Aventurine-Ghost-Theme/assets/sass/style-xsmall.scss */
 .feature-image {
   height: auto; }
 
