--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -24,7 +24,7 @@
 	$color-border2:				rgba(144,144,144,0.5);
 	$color-border2-bg:			rgba(144,144,144,0.2);
 
-	$color-accent-bg:			#8CD9D3;
+	$color-accent-bg:			#00A5A9;
 	$color-accent-fg:			mix($color-accent-bg, #ffffff, 25%);
 	$color-accent-fg-bold:		#ffffff;
 	$color-accent-fg-light:		mix($color-accent-bg, #ffffff, 40%);
