Font size changes. Single post structure

--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -8,8 +8,8 @@
 	$size-element-margin:		2em;
 
 // Font.
-	$font-family:				'Merriweather Sans', Arial, Helvetica, sans-serif;
-    $font-family-display:       'Megrim', Arial, Helvetica, sans-serif;
+	$font-family:				'Ubuntu', Arial, Helvetica, sans-serif;
+    $font-family-display:       'Ubuntu', Arial, Helvetica, sans-serif;
 	$font-family-fixed:			'Courier New', monospace;
 	$font-weight:				normal;
 	$font-weight-bold:			bold;
