--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -37,10 +37,12 @@
 	p {
 		margin: 0 0 $size-element-margin 0;
         line-height:2em;
+        font-size:0.85em;
+        font-family:'Merriweather Sans', Arial, sans-serif;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: 300;
+		font-weight: 700;
 		line-height: 1em;
 		margin: 0 0 ($size-element-margin * 0.35) 0;
 
