--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -17,7 +17,7 @@
                 <article class="post-content">
                     <p>{{excerpt characters="300"}}...</p>
                 </article>
-                <a href="{{url}}" class="read-more">Read More »</a>
+                <a href="{{url}}" class="read-more button special">Read More »</a>
             </div>
         </section>
         {{#if image}}
