Font size adjust. Header restruct

--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -2,7 +2,7 @@
 	$duration-transition:		0.2s;
 
 // Size.
-	$size-border-radius:		4px;
+	$size-border-radius:		0;
 	$size-border-width:			1px;
 	$size-element-height:		2.75em;
 	$size-element-margin:		2em;
